@@ -1,3 +1,8 @@
+4-30-19
+- refactoring commands...
+- rename break and watch to breakpoint and watchpoint
+- fix command completer bug
+
 4-26-19
 - rewrote cmdfunc_kill so iosdbg handles this SIGKILL like any other
 - improved watchpoint regex
